[package]
name = "venus_kernel"
version = "0.1.0"
authors = ["Jadon Fowler <j@jadon.io>"]
edition = "2018"

[dependencies]
bootloader = "0.6.4"
volatile = "0.2.6"
spin = "0.5.1"
x86_64 = "0.7.4"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300
